participantes por rama

--- a/5_experiments_and_results/0_index.tex
+++ b/5_experiments_and_results/0_index.tex
@@ -639,7 +639,9 @@ Para valorar la consecución de los objetivos se plantearon las siguientes hipó
 \item \emph{H2}: El DSL permite a los docentes diseñar y contrastar estrategias de evaluación a partir de los registros de actividad de los entornos de aprendizaje virtual
 \end{itemize}
 
-Para evaluar tanto \emph{H1} como \emph{H2} se utilizó el cuestionario~\ref{apc:eval:metodo:cuestionario}. Además, para conocer la validez de los indicadores obtenidos mediante el método DBA y la herramienta EvalCourse para evaluar las competencias genéricas se utilizaron los cuestionarios~\ref{apc:sec:cuestionario} y~\ref{apc:AA:cuestionario}. Para ello se planteó en el cuestionario un estudio de caso de ejemplo, preguntándose a los participantes si consideraban los indicadores obtenidos mediante el método DBA y la herramienta EvalCourse válidos para evaluar las competencias genéricas.%, corroborando si su respuesta es independiente del perfil tecnológico de los participantes en el cuestionario.
+Para evaluar tanto \emph{H1} como \emph{H2} se utilizó el cuestionario~\ref{apc:eval:metodo:cuestionario}. En dicho cuestionario se realizaron diversas cuestiones relacionadas con el método DBA y con el DSL a docentes de diferentes ramas. De esta forma no sólo se persigue saber si los docentes dan validez al método o el DSL, sino también que la consideración de alguno de los aspectos de estos es independiente de la rama de cada docente.
+
+Además, para saber si los docentes consideran válidos los indicadores obtenidos mediante el método DBA y la herramienta EvalCourse para evaluar las competencias genéricas se utilizaron los cuestionarios~\ref{apc:sec:cuestionario} y~\ref{apc:AA:cuestionario}. Para ello se planteó en el cuestionario un estudio de caso de ejemplo, preguntándose a los participantes si consideraban los indicadores obtenidos mediante el método DBA y la herramienta EvalCourse válidos para evaluar las competencias genéricas.%, corroborando si su respuesta es independiente del perfil tecnológico de los participantes en el cuestionario.
 
 Como se puede observar en esta tesis a tenor de los objetivos, lo que se propone es un método y la herramienta (DSL) para diseñar evaluaciones de competencias genéricas. Esto significa que los indicadores que se proponen a lo largo de los ejemplos y los estudios de caso mostrados no son fijos, es decir, que lo que es válido para un docente como indicador de una competencia puede no serlo para otro y viceversa. Por tanto, un número elevado de docentes que considere válido los indicadores no justificaría en exclusiva la validez de los resultados. Para dar validez a los resultados, además hay que demostrar que el hecho de que un número de docentes lo acepte y otros no debe estar marcado única y exclusivamente por el criterio de cada docente, y no porque sus habilidades tecnológicas le confieran mayor pericia y conocimiento en el manejo del DSL que proporciona los indicadores.
 
@@ -675,12 +677,32 @@ En este caso se consiguieron 19 cuestionarios completados (cuestionario~\ref{apc
 
 	En estas jornadas celebradas en el mes de marzo de 2016 se presentaron tanto el método DBA como el DSL que lo implementa. Los participantes eran docentes de todas las ramas de la universidad que presencialmente completaron la encuesta. 
 
-En este último caso se recopilaron 30 cuestionarios (cuestionario~\ref{apc:eval:metodo:cuestionario}). 
+En este último caso se recopilaron 31 cuestionarios (cuestionario~\ref{apc:eval:metodo:cuestionario}). 
 
 
 \subsection{Resultados del cuestionario del método y el DSL}
 
-El cuestionario~\ref{apc:eval:metodo:cuestionario} fue completado por 30 docentes en el mes de marzo de 2016 tras asistir a la presentación del método y el DSl en las Jornadas de Innovación Docente. La distribución de los participantes con respecto a la rama que pertenecen se muestra en la figura ... %~\ref{fig:cap:encuesta:rama}.
+El cuestionario~\ref{apc:eval:metodo:cuestionario} fue completado por 31 docentes en el mes de marzo de 2016 tras asistir a la presentación del método y el DSL en las Jornadas de Innovación Docente. La distribución de los participantes con respecto a la rama que pertenecen se muestra en la figura~\ref{fig:cap:encuesta:rama} y es la que sigue:
+
+\begin{itemize}
+\item Arte y humanidades: 5
+\item Ciencias: 5
+\item Ciencias de la salud: 6
+\item Ciencias sociales y jurídicas: 5
+\item Ingeniería y arquitectura: 10
+\end{itemize}
+
+% LA PIE TIENE UN ESTILO DIFERENTE A LA DE POBLACIÓN DEL OTRO CUESTIONARIO (GDOC VS XLS). DEBERÍA UNIFICAR ...
+
+\begin{figure}
+  \begin{center}
+    \includegraphics[scale=0.5]{EncuestaRamasPie.png}
+  \end{center}
+  \caption{Distribución de los participantes por rama}
+  \label{fig:cap:encuesta:rama}
+\end{figure}
+
+
 
 \subsection{Resultados del cuestionario de indicadores}
 
